--- a/book.toml
+++ b/book.toml
@@ -8,11 +8,10 @@ title = " "
 [output.html]
 additional-js = ["custom.js"]
 base-url = "/"
-site-url = "/"
+site-url = "https://abanoubnashaat.xyz/"
 
 [output.html.search]
 enable = true
-
 
 
 
