--- a/book.toml
+++ b/book.toml
@@ -8,7 +8,7 @@ title = " "
 [output.html]
 additional-js = ["custom.js"]
 base-url = "/"
-site-url = "https://abanoubnashaat.xyz/"
+site-url = "/"
 
 [output.html.search]
 enable = true
